Cannot select text within a label element that is linked to an input field

Cannot select text within a label element that is linked to an input field
https://bugs.webkit.org/show_bug.cgi?id=96734

Reviewed by NOBODY (OOPS!).

Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=174296

Any click event on label goes to its control element. So, if
we tried to select the text inside label by dragging the mouse
or by double clicking on the text, it went to its control
element. This patch checks whether there is selection or not,
after the click is happened. If there is selection then do
nothing else continue.

* Source/WebCore/html/HTMLLabelElement.cpp:
(HTMLLabelElement::defaultEventHandler): Added selection condition and necessary headers
* LayoutTests/fast/forms/label/label-selection.html: Added Test Case
* LayoutTests/fast/forms/label/label-selection-expected.txt: Added Test Case Expectations